#51 Barrierefreiheit: Menüs Tastatursteuerung + WAI-ARIA: Fix z-index of menus.

--- a/core51/core.responsive.css
+++ b/core51/core.responsive.css
@@ -56,6 +56,9 @@ body { padding: 0; margin: 0; }
 
 #favlistlink { display: inline-block; padding: 2px; }
 
+ul.dropdown {
+  z-index: unset;
+}
 ul.dropdown ul {
 	width: 16rem;
 }
